# el-axon

./: Cargo.toml  Dockerfile  eigenlayer-deployed-anvil-state.json  run.sh
.github/workflows/: build_image_ecr.yml
avs-contract/: AxonAVSDeployer.json  AxonAVSServiceManager.json  AxonAVSTaskManager.json  ERC20Mock.json
avs-optional/: Cargo.toml  README.md
avs-optional/src/: main.rs
common/apm/: Cargo.toml
common/apm-derive/: Cargo.toml
common/apm-derive/examples/: api.rs
common/apm/src/: metrics.rs  server.rs
common/config-parser/: Cargo.toml
common/config-parser/src/types/: config.rs  spec.rs
common/crypto/: Cargo.toml
common/crypto/benches/: bench_sig.rs
common/hasher/: Cargo.toml
common/logger/: Cargo.toml
common/memory-tracker/: Cargo.toml
common/merkle/: Cargo.toml
common/merkle/src/: lib.rs
common/version/: Cargo.toml
contracts/: eigenlayer-deployed-anvil-state.json  foundry.toml  remappings.txt
contracts/script/: AxonAVSDeployer.s.sol
contracts/script/output/31337/: axon_avs_deployment_output.json
contracts/src/: AxonAVSServiceManager.sol  AxonAVSTaskManager.sol  IAxonAVSTaskManager.sol
contracts/test/: AxonAVSTaskManager.t.sol
core/api/: Cargo.toml
core/api/src/: adapter.rs  lib.rs
core/api/src/jsonrpc/: error.rs  mod.rs  web3_types.rs  ws_subscription.rs
core/api/src/jsonrpc/impl/: axon.rs  filter.rs  node.rs  web3.rs
core/avs/: Cargo.toml
core/avs/src/: lib.rs  msg.rs
core/cli/: Cargo.toml
core/cli/src/: lib.rs
core/cli/src/args/: generate_keypair.rs
core/consensus/: Cargo.toml
core/consensus/benches/: bench_wal.rs
core/consensus/src/: adapter.rs  engine.rs  lib.rs  message.rs  synchronization.rs  types.rs  util.rs  wal.rs
core/consensus/src/tests/: mod.rs  synchronization.rs
core/db/: Cargo.toml
core/db/src/: lib.rs  memory.rs  rocks.rs
core/el-node-api/: Cargo.toml
core/el-node-api/src/: lib.rs  types.rs
core/el-prometheus/: Cargo.toml
core/el-utils/: Cargo.toml
core/el-utils/src/: aggregator.rs  bn254.rs  lib.rs  metrics.rs  provider.rs
core/el-utils/src/client/: mod.rs
core/el-utils/src/client/avs/: error.rs  mod.rs  reader.rs  subscriber.rs  util.rs  writer.rs
core/el-utils/src/client/elcontract/: reader.rs  writer.rs
core/el-utils/src/client/eth/: client.rs
core/el-utils/src/contract/: avs_dictionary.rs  axon_avs_deployer.rs  axon_avs_service_manager.rs  axon_avs_task_manager.rs  bls_apk_registry.rs  delegation_manager.rs  erc20_mock.rs  i_erc20.rs  i_slasher.rs  i_strategy.rs  incredible_squaring_service_manager.rs  incredible_squaring_task_manager.rs  mod.rs  operator_state_retriever.rs  registry_coordinator.rs  service_manager_base.rs  stake_registry.rs  strategy_manager.rs
core/executor/: Cargo.toml
core/executor/benches/: bench_convert_u256.rs  bench_transfer.rs  mock.rs
core/executor/src/: lib.rs  tracing.rs  utils.rs
core/executor/src/adapter/backend/: apply.rs  read_only.rs
core/executor/src/adapter/trie/: db.rs  wrapped.rs
core/executor/src/debugger/: create2.rs  mod.rs
core/executor/src/precompiles/: blake2_f.rs  call_ckb_vm.rs  ckb_blake2b.rs  ckb_mbt_verify.rs  ec_add.rs  ec_mul.rs  ec_pairing.rs  ecrecover.rs  get_cell.rs  get_header.rs  identity.rs  mod.rs  modexp.rs  ripemd160.rs  sha256.rs  tests.rs
core/executor/src/system_contract/: error.rs  mod.rs  native_token.rs  utils.rs
core/executor/src/system_contract/ckb_light_client/: mod.rs
core/executor/src/system_contract/image_cell/: mod.rs  store.rs
core/executor/src/system_contract/image_cell/abi/: mod.rs
core/executor/src/system_contract/metadata/: handle.rs  mod.rs  store.rs
core/executor/src/system_contract/metadata/abi/: metadata_abi.json  metadata_abi.rs  mod.rs
core/executor/src/tests/: mod.rs
core/executor/src/tests/system_script/: ckb_light_client.rs  image_cell.rs  metadata.rs  native_token.rs
core/interoperation/: Cargo.toml
core/interoperation/src/: lib.rs
core/mempool/: Cargo.toml
core/mempool/benches/: bench.rs  mock.rs
core/mempool/src/: lib.rs  pool.rs  tx_wrapper.rs
core/mempool/src/adapter/: message.rs  mod.rs
core/mempool/src/tests/: mempool.rs  mod.rs
core/network/: Cargo.toml
core/network/examples/: simple.rs
core/network/src/: common.rs  endpoint.rs  error.rs  service.rs
core/network/src/outbound/: gossip.rs  rpc.rs
core/network/src/peer_manager/: mod.rs
core/network/src/peer_manager/peer_store/: addr_manager.rs
core/network/src/protocols/discovery/: mod.rs
core/network/src/protocols/transmitter/: mod.rs
core/network/src/reactor/: router.rs
core/rpc-client/: Cargo.toml
core/run/: Cargo.toml
core/run/src/: error.rs  lib.rs  tests.rs
core/run/src/components/: chain_spec.rs  network.rs  storage.rs  system.rs
core/storage/: Cargo.toml
core/storage/benches/: bench.rs
core/storage/src/: hash_key.rs  lib.rs
core/storage/src/tests/: mod.rs
devtools/abi-generator/: Cargo.toml
devtools/chain/: config.toml  validators.toml
devtools/chain/nodes/: node_0.toml  node_0_bls.key  node_0_net.key
devtools/chain/specs/single_node/: chain-spec.toml
devtools/metadata-cli/: Cargo.toml
devtools/metadata-cli/src/: main.rs
devtools/update-validator/: Cargo.toml  README.md
devtools/update-validator/src/: main.rs
examples/: custom_chain.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/codec/: block.rs  error.rs  executor.rs  mod.rs  receipt.rs  transaction.rs
protocol/src/constants/: configs.rs
protocol/src/traits/: api.rs  consensus.rs  executor.rs  mempool.rs  network.rs
protocol/src/types/: batch.rs  block.rs  executor.rs  interoperation.rs  mod.rs  primitive.rs  receipt.rs  transaction.rs
src/: lib.rs  main.rs
