[package]
name = "avs-optional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.7"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
alloy-provider = { version = "0.1", features = ["reqwest"] }
rust-bls-bn254 = "0.1.0"
futures-util = "0.3"
ethers = "2.0"
num-bigint = "0.4"
eigen-chainio-utils = { git = "https://github.com/supernovahs/eigen-rs.git" }
eigen-client-avsregistry = { git = "https://github.com/supernovahs/eigen-rs.git" }
eigen-services-operatorsinfo = { git = "https://github.com/supernovahs/eigen-rs.git" }
eigen-services-avsregistry = { git = "https://github.com/supernovahs/eigen-rs.git" }

el-utils = { path = "../core/el-utils" }
protocol = { path = "../protocol", package = "axon-protocol"}
