[package]
name = "axon-protocol"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy.workspace = true
alloy-rlp.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
ckb-hash.workspace = true
ckb-jsonrpc-types.workspace = true
ckb-sdk.workspace = true        
ckb-traits.workspace = true
ckb-types.workspace = true
creep.workspace = true
derive_more.workspace = true
ethereum.workspace = true
ethers-core.workspace = true
evm.workspace = true
faster-hex.workspace = true
hasher.workspace = true
lazy_static.workspace = true
overlord.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
trie.workspace = true
zeroize.workspace = true

common-crypto.workspace = true
common-hasher.workspace = true

[dev-dependencies]
hex.workspace = true
rand7.workspace = true
serde_json.workspace = true
toml.workspace = true

common-merkle.workspace = true

[features]
default = ["hex-serialize"]
hex-serialize = []
