[package]
name = "common-apm-derive"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
fut-ret.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
async-trait.workspace = true
common-apm.workspace = true
jsonrpsee.workspace = true
log.workspace = true

protocol.workspace = true
