[package]
name = "common-apm"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap.workspace = true
axum.workspace = true
beef.workspace = true
derive_more.workspace = true
lazy_static.workspace = true
log.workspace = true
minstant.workspace = true
prometheus.workspace = true
prometheus-static-metric.workspace = true
rustracing.workspace = true
rustracing_jaeger.workspace = true
trackable.workspace = true

common-apm-derive.workspace = true
protocol.workspace = true
