[package]
name = "common-config-parser"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stringreader.workspace = true
strum.workspace = true
strum_macros.workspace = true
tentacle-multiaddr.workspace = true
toml.workspace = true

common-crypto.workspace = true
protocol.workspace = true
