[package]
name = "common-crypto"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need to enable the portable feature because some github runners don't support ADX
blst.workspace = true
ophelia.workspace = true
ophelia-blst.workspace = true
ophelia-secp256k1.workspace = true

[dev-dependencies]
criterion.workspace = true
overlord.workspace = true
rand.workspace = true

protocol = { workspace = true, default-features = false }

[[bench]]
harness = false
name = "bench_sig"
