[package]
name = "common-logger"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
creep.workspace = true
env_logger.workspace = true
json.workspace = true
log.workspace = true
log4rs.workspace = true
rustracing_jaeger.workspace = true
serde.workspace = true
