[package]
edition = "2021"
name = "common-memory-tracker"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemalloc-ctl.workspace = true
libc.workspace = true
log.workspace = true
once_cell.workspace = true
rocksdb.workspace = true

common-apm.workspace = true
protocol.workspace = true
