[package]
name = "common-merkle"
version = "0.2.1"
authors = ["Nervos Dev <dev@nervos.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-rlp.workspace = true
hasher.workspace = true
static_merkle_tree.workspace = true

protocol.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
harness = false
name = "bench"
