[package]
name = "core-api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-graphql = { version = "3.0", features = ["tracing"] }
beef.workspace = true
ckb-jsonrpc-types.workspace = true
ckb-traits.workspace = true
ckb-types.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
log.workspace = true
parking_lot.workspace = true
pprof = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tower.workspace = true
tower-http.workspace = true

common-apm.workspace = true
common-config-parser.workspace = true
core-consensus.workspace = true
core-executor.workspace = true
core-interoperation.workspace = true
either.workspace = true
protocol.workspace = true

[dev-dependencies]
json = "0.12"
