[package]
name = "avs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
log = "0.4"
rlp = "0.5"
rlp-derive = "0.1"

common-crypto = { path = "../../common/crypto" }
core-executor = { path = "../../core/executor" }
core-rpc-client = { path = "../../core/rpc-client" }
core-storage = { path = "../../core/storage" }
protocol = { path = "../../protocol", package = "axon-protocol" }
