[package]
name = "core-cli"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tentacle-secio.workspace = true
thiserror.workspace = true

common-config-parser.workspace = true
common-crypto.workspace = true
common-logger.workspace = true
common-version.workspace = true
core-run.workspace = true
protocol.workspace = true
