[package]
name = "core-consensus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-rlp.workspace = true
arc-swap.workspace = true
derive_more.workspace = true
futures.workspace = true
json.workspace = true
lazy_static.workspace = true
log.workspace = true
overlord.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

common-apm.workspace = true
common-apm-derive.workspace = true
common-crypto.workspace = true
common-logger.workspace = true
common-merkle.workspace = true
core-executor.workspace = true
core-mempool.workspace = true
core-network.workspace = true
core-storage.workspace = true
protocol.workspace = true

[dev-dependencies]
bit-vec.workspace = true
criterion.workspace = true
num-traits.workspace = true
rand7.workspace = true

[features]
default = []
random_leader = ["overlord/random_leader"]

[[bench]]
harness = false
name = "bench_wal"
