[package]
name = "core-db"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
rocksdb.workspace = true

common-apm.workspace = true
common-apm-derive.workspace = true
common-config-parser.workspace = true
protocol.workspace = true

