[package]
name = "el-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = "2.0.14"
ethers-providers = "2.0"
thiserror = "1.0"
lazy_static = "1.4"
prometheus = "0.13"
prometheus-static-metric = "0.5"
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

protocol = { path = "../../protocol", package = "axon-protocol" }
