[package]
name = "el-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.7"
eigen-crypto-bls = { git = "https://github.com/supernovahs/eigen-rs.git" }
eigen-crypto-bn254 = { git = "https://github.com/supernovahs/eigen-rs.git" }
eigen-types = { git = "https://github.com/supernovahs/eigen-rs.git" }
ethers = "2.0"
ethers-core = "2.0"
ethers-providers = { version = "2.0", features = ["ws"] }
futures = "0.3"
num-bigint = "0.4"
thiserror = "1.0"
lazy_static = "1.4"
prometheus = "0.13"
prometheus-client = "0.22"
prometheus-static-metric = "0.5"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
url = "2.5"

ark-ff = { version = "0.4.2", default-features = false }
ark-bn254 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
sha2 = { version = "0.10.6", default-features = false }

protocol = { path = "../../protocol", package = "axon-protocol" }
