[package]
edition = "2021"
name = "core-executor"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap.workspace = true
az.workspace = true
bn.workspace = true
ckb-traits.workspace = true
ckb-types.workspace = true
common-apm.workspace = true
common-config-parser.workspace = true
common-crypto.workspace = true
common-merkle.workspace = true
core-db.workspace = true
core-interoperation.workspace = true
ethers.workspace = true
evm.workspace = true
evm-types.workspace = true
futures.workspace = true
hasher.workspace = true
lazy_static.workspace = true
log.workspace = true
lru.workspace = true
molecule.workspace = true
parking_lot.workspace = true
protocol.workspace = true
ripemd.workspace = true
rlp.workspace = true
rocksdb.workspace = true
rug.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
bytemuck.workspace = true
ckb-jsonrpc-types.workspace = true
common-crypto.workspace = true
core-rpc-client.workspace = true
core-storage.workspace = true
criterion.workspace = true
env_logger.workspace = true
hashbrown.workspace = true
rand7.workspace = true
revm.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[bench]]
harness = false
name = "bench_convert_u256"

[[bench]]
harness = false
name = "bench_transfer"
