[package]
name = "core-interoperation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap.workspace = true
ckb-chain-spec.workspace = true
ckb-error.workspace = true
ckb-script.workspace = true
ckb-traits.workspace = true
ckb-types.workspace = true
ckb-vm.workspace = true
lazy_static.workspace = true
log.workspace = true

protocol.workspace = true

[dev-dependencies]
ckb-jsonrpc-types.workspace = true
ed25519-dalek.workspace = true
ethers-core.workspace = true
serde_json.workspace = true

core-rpc-client.workspace = true
core-executor.workspace = true
core-storage.workspace = true
core-db.workspace = true
