[package]
name = "core-mempool"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-rlp.workspace = true
ckb-types.workspace = true
crossbeam-queue.workspace = true
dashmap.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
parking_lot.workspace = true

common-apm.workspace = true
common-apm-derive.workspace = true
common-config-parser.workspace = true
common-crypto.workspace = true
core-executor.workspace = true
core-interoperation.workspace = true
core-network.workspace = true
protocol.workspace = true

[dev-dependencies]
criterion.workspace = true
parking_lot.workspace = true
rand7.workspace = true

[[bench]]
harness = false
name = "bench"
