[package]
name = "core-network"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-filters.workspace = true
derive_more.workspace = true
faketime.workspace = true
futures.workspace = true
ipnetwork.workspace = true
log.workspace = true
parking_lot.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
snap.workspace = true
socket2.workspace = true
tentacle.workspace = true
tokio-util.workspace = true

common-apm.workspace = true
common-apm-derive.workspace = true
common-config-parser.workspace = true
protocol.workspace = true

[dev-dependencies]
env_logger = "0.10"
