[package]
name = "core-rpc-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types.workspace = true
ckb-sdk.workspace = true
ckb-types.workspace = true
futures.workspace = true
jsonrpc-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

protocol.workspace = true
