[package]
name = "core-run"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace.workspace = true
ethers-core.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
toml.workspace = true

common-apm.workspace = true
common-apm-derive.workspace = true
common-config-parser.workspace = true
common-crypto.workspace = true
common-logger.workspace = true
common-memory-tracker = { workspace = true, optional = true }
core-api.workspace = true
core-consensus.workspace = true
core-db.workspace = true
core-executor.workspace = true
core-interoperation.workspace = true
core-mempool.workspace = true
core-network.workspace = true
core-rpc-client.workspace = true
core-storage.workspace = true
protocol.workspace = true

[target.'cfg(all(not(target_env = "msvc"), not(target_os="macos")))'.dependencies]
jemalloc-ctl = { workspace = true, optional = true }
jemallocator = { workspace = true, optional = true }

[dev-dependencies]
clap.workspace = true
hasher.workspace = true
tempfile.workspace = true

[features]
jemalloc = ["dep:jemallocator", "dep:jemalloc-ctl", "dep:common-memory-tracker"]
