[package]
edition = "2021"
name = "core-storage"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap.workspace = true
derive_more.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
lru.workspace = true
parking_lot.workspace = true

common-apm.workspace = true
common-apm-derive.workspace = true
core-db.workspace = true
protocol.workspace = true

[dev-dependencies]
common-crypto.workspace = true
criterion.workspace = true
num-traits.workspace = true
rand7.workspace = true

[[bench]]
harness = false
name = "bench"
