[package]
name = "metadata-cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "axon-metadata"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
molecule.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.12"
toml.workspace = true

axon-protocol = { path = "../../protocol" }
axon-types = { git = "https://github.com/axonweb3/axon-contract.git", rev = "b82a843" }
